# renv

./: .gitignore  .travis.yml  LICENSE  README.md  build.sh  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
renv/: __init__.py  activate.py  core.py  renv.py  utils.py
renv/cookies/init/: cookiecutter.json
renv/cookies/nt/: activate  activate.bat  cookiecutter.json
renv/cookies/nt/{{ cookiecutter.dirname }}/: Activate.ps.1  deactivate.bat
renv/cookies/nt/{{cookiecutter.dirname}}/: .Renviron  .Rprofile  Activate.ps.1  activate  activate.bat
renv/cookies/poisix/: .Rprofile
renv/cookies/posix/: cookiecutter.json
renv/cookies/posix/{{ cookiecutter.dirname }}/: .Renviron  .Rprofile  activate.csh  activate.fish
renv/cookies/posix/{{cookiecutter.dirname}}/: .Renviron  Renviron.site  Rprofile.site  activate  activate.fish
renv/scripts/common/: .Renviron  .Rprofile  activate  activate_beRi_env
renv/scripts/nt/: activate.bat
renv/scripts/poisix/: activate.csh
