[tool.poetry]
name = "renv"
version = "0.3.1"
license = "MIT"
description = """The renv package is a CLI tool for creating environments for the R statistical programming language.  It takes advantage of the python venv module and its modular EnvBuilder class."""
authors = ["Rob Gilmore <robgilmore127@gmail.com>", "Santina Lin <santina424@gmail.com>", "Shaurita Hutchins <sdhutchins@outlook.com>"]
readme = "README.md"
repository = "https://github.com/datasnakes/renv"
keywords = ["R", "virtual", "environment", "reproducible", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Other",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems"
    ]

[tool.poetry.dependencies]
python = ">=3.4"
click = "^7.0"
pyyaml = "^3.12"
cookiecutter = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^3.5"

[tool.poetry.scripts]
renv = 'renv.renv:renv'
